alignment fix

--- a/css/paginator.css
+++ b/css/paginator.css
@@ -136,8 +136,6 @@ button {
     text-align: center;
     position: absolute;
     width: 100%;
-    top: 18%;
-    margin-top: -15px;
     font-size: 30px;
     font-family: Helvetica, sans-serif;
     text-shadow: 0px 2px 0px rgba(0, 0, 0, 0.2);
